style/about.css
/* COLOR PALLETTE */
:root {
  --black: #000000;
  --bblue: #04080d;
  --dblue: #1b263b;
  --dblue2: #111824;
  --mblue: #415a77;
  --lblue: #778da9;
  --grey: #e0e1dd;
  --txtgrey: #c7c8c5;
  --dgrey: #152130;
  --secondary: #ec2d47;
  --dsecondary: #9e2030;
}

#about-page {
  background-image: linear-gradient(
    to bottom,
    var(--black) 0%,
    var(--black) 65%,
    var(--dblue) 100%
  );
  height: 180svh;
  color: var(--txtgrey);
}

#about-page > hr {
  margin-bottom: 3em;
  width: 35%;
}

#abt-article {
  display: grid;
  /* grid-template-columns: repeat(3, 31vw);
  grid-template-rows: 29vw 41vw; */
  grid-template-columns: repeat(3, 20em);
  grid-template-rows: 20em 27.5em;
  gap: 1.5em;
}

.article-wrapper {
  display: flex;
  justify-content: center;
}

.abt-title {
  text-align: center;
  padding: 1em 0 0.25em 0;
}

#box1 {
  grid-row: 1/2;
  grid-column: 1/2;
  display: flex;
  justify-content: center;
}

#portrait {
  width: 20em;
  height: auto;
  border-radius: 20px;
  align-self: center;
  justify-content: center;
  transform: scaleX(-1);
  box-shadow: 0 0 10px var(--mblue);
  transition-duration: 0.4s;
}

#portrait:hover {
  box-shadow: 0 0 40px var(--mblue);
  transition-duration: 0.4s;
}

#box2 {
  grid-row: 1/2;
  grid-column: 2/3;
  display: grid;
  grid-template-rows: 40% 60%;
}

#info {
  background-color: var(--dblue2);
  border-radius: 20px;
  margin-bottom: 1.5em;
  box-shadow: 0 0 10px var(--mblue);
  transition-duration: 0.4s;
}

#info:hover {
  box-shadow: 0 0 40px var(--mblue);
  transition-duration: 0.4s;
}

#message {
  background-color: var(--dblue);
  border-radius: 20px;
  box-shadow: 0 0 10px var(--mblue);
  transition-duration: 0.4s;
}

#message:hover {
  box-shadow: 0 0 40px var(--mblue);
  transition-duration: 0.4s;
}

.name {
  letter-spacing: 1px;
  margin: 0.5rem 0 0 1rem;
  font-size: 1.8rem;
  color: var(--grey);
  font-weight: 300;
}

.description {
  font-weight: 200;
  font-style: italic;
  margin: 0.15rem 0 0 1rem;
  font-size: 1.15rem;
  line-height: 1.6rem;
}

.txt {
  font-size: 0.9rem;
  line-height: 1.5rem;
  font-weight: 300;
}

.aboutme {
  padding: 1.5rem 2.5rem 1.75rem 2.5rem;
}

b {
  transition-duration: 0.4s;
  color: var(--grey);
}

#box3 {
  grid-column: 3/4;
  grid-row: 1/4;
  background-image: radial-gradient(
    circle,
    var(--dblue2) 0%,
    var(--dblue) 100%
  );
  border-radius: 20px;
  box-shadow: 0 0 10px var(--mblue);
  transition-duration: 0.4s;
}

#box3:hover {
  box-shadow: 0 0 40px var(--mblue);
  transition-duration: 0.4s;
}

.tech-stack {
  display: grid;
  grid-template-rows: 4rem 48rem;
}

.tech-grid {
  display: grid;
  grid-template-rows: repeat(12, 3.75rem);
  gap: 0.25rem;
}

.stack-title {
  font-size: 2rem;
  grid-row: 1/2;
  color: var(--grey);
  font-weight: 300;
  letter-spacing: 1px;
  padding: 0.5em 0 0.5em 1.4em;
}

.tech-icon {
  font-size: 3em;
  margin-left: 0.75em;
}

.grid-cell {
  border-radius: 20px;
  display: grid;
  font-size: 0.75rem;
  grid-template-columns: 8em 12em;
  align-items: center;
  transition-duration: 0.2s;
}

.grid-cell:hover {
  border: 2px solid var(--secondary);
  box-shadow: 0 0 20px var(--secondary);
  transition-duration: 0.3s;
}

#box4 {
  grid-column: 1 / span 2;
  grid-row: 2/3;
  border-radius: 20px;
  display: grid;
  grid-template-rows: 23rem 6rem;
  gap: 1.5em;
}

#experience {
  border-radius: 20px;
}

#experience:hover {
  box-shadow: 0 0 40px var(--mblue);
  transition-duration: 0.4s;
  transition-delay: 0.7s;
}

#status {
  border-radius: 20px;
  text-align: center;
  display: grid;
  justify-content: center;
  align-items: center;
  font-size: 1.6rem;
  font-weight: 300;
  color: var(--secondary);
  animation: glow-red-animate 2s linear infinite;
  transition: all 0.5s ease-in-out;
}

@keyframes glow-red-animate {
  0%,
  100% {
    box-shadow: 0 0 10px var(--secondary);
    border: 2px solid var(--secondary);
  }
  50% {
    box-shadow: 0 0 20px var(--secondary);
    border: 4px solid var(--secondary);
  }
}

.hire-now {
  color: transparent;
  grid-row: 1/2;
  grid-column: 1/2;
}

.msg1 {
  grid-row: 1/2;
  grid-column: 1/2;
}

#status:hover {
  background-color: var(--dsecondary);
  color: transparent;
  transition: all 0.5s ease-in-out;
}

#status:hover .hire-now {
  color: var(--grey);
  text-shadow: 0 0 20px white;
  transition-delay: 0.3s;
  transition-duration: 0.5s;
}

/* FLIP CARD */
.flip-card {
  background-color: transparent;
  width: 100%;
  height: 100%;
  perspective: 1000px;
}

/* This container is needed to position the front and back side */
.flip-card-inner {
  position: relative;
  width: 100%;
  height: 100%;
  transition: transform 0.8s;
  transform-style: preserve-3d;
}

/* Do an horizontal flip when you move the mouse over the flip box container */
.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

/* Position the front and back side */
.flip-card-front,
.flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
}

/* Style the front side (fallback if image is missing) */
.flip-card-front {
  background-color: var(--dblue2);
  border-radius: 20px;
  box-shadow: 0 0 10px var(--mblue);
  font-weight: 300;
}

/* Style the back side */
.flip-card-back {
  background-image: linear-gradient(#1b1b1b, #333);
  transform: rotateY(180deg);
  border-radius: 20px;
  box-shadow: 0 0 10px var(--mblue);
}

.flip-card h1 {
  font-size: 2rem;
  color: var(--grey);
  font-weight: 300;
}

.flip-card-front b {
  font-weight: 600;
}

.flip-title {
  text-align: center;
  margin: 0.75em 0 0.75em 0;
  letter-spacing: 1px;
}

.rotate-icon {
  position: fixed;
  right: 4%;
}

.education-grid {
  display: grid;
  font-size: 0.9rem;
  gap: 0.4rem;
  margin: 0 10% 0 10%;
}

.relavent-course {
  display: grid;
  grid-template-columns: 90% 10%;
  gap: 0.4em;
}

.course-grid-title {
  grid-column: 1 / 3;
}

.relavent-course p {
  font-style: italic;
}

.work-grid {
  display: grid;
  grid-template-columns: 50% 50%;
  font-size: 1rem;
  gap: 1rem;
  margin: 0 10% 0 10%;
  font-weight: 300;
}

.job-grid {
  display: grid;
  gap: 0.75rem;
}

@media screen and (max-width: 1100px) {
  #abt-article {
    grid-template-columns: 20em;
    gap: 1.5em;
    grid-template-rows: 20em 20em 51.5em 27.5em;
    height: 360svh;
  }

  #about-page {
    height: 400svh;
  }

  #box1 {
    grid-row: 1/2;
    grid-column: 1/2;
  }

  #box2 {
    grid-row: 2/3;
    grid-column: 1/2;
  }

  #box3 {
    grid-row: 3/4;
    grid-column: 1/2;
  }
  #box4 {
    grid-row: 4/5;
    grid-column: 1/2;
  }
  #status {
    font-size: 12.5px;
  }
  #experience h1 {
    font-size: 20px;
  }
  #experience p {
    font-size: 12px;
  }
}

